added p in index.html on second-branch

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="introduction">
       <div>
         <h1 class="introduction__title">This repository is intended for testing things</h1>
+        <p>Women in Code</p>
       </div>
       <div class="introduction__content">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
