--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testing Things</title>
+  <title>Testing Thmekina git branch ings</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,17 +16,17 @@
         <h1 class="introduction__title">This repository is intended for testing things</h1>
       </div>
       <div>
-        <h1>THIS IS THE CHANGE</h1>
+        <h2>THIS IS MY CHANGE yut8g8t6fu6gseiytgvgit </h2>
       </div>
       <div class="introduction__content">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's
+          hola hola migraxode industry's
           standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
           make a
           type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
           remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
           containing
-          Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+          Lorem Ipsum passages, and more recently with guygtf74rftu7desktop publishing software like Aldus PageMaker including
           versions
           of Lorem Ipsum.</p>
       </div>
