--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testing Thmekina git branch ings</title>
+  <title>Testing Thmekina git ings</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+<h1> HOla domingu </h1>
   <main>
     <div class="introduction">
       <div>
@@ -26,9 +26,10 @@
           type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
           remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
           containing
-          Lorem Ipsum passages, and more recently with guygtf74rftu7desktop publishing software like Aldus PageMaker including
+          Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
           versions
           of Lorem Ipsum.</p>
+          <img src="vek ">
       </div>
       <div class="introduction__image">
         <img src="santa-cat-market.png" alt="Santa Catarina Market in Barcelona">
