--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 
 <body>
-
   <main>
     <div class="introduction">
       <div>
         <h1 class="introduction__title">This repository is intended for testing things</h1>
       </div>
       <div class="introduction__content">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+        [<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
           industry's
           standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
           make a
@@ -26,7 +25,7 @@
           Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
           versions
           of Lorem Ipsum.</p>
-      </div>
+      </div>]
       <div class="introduction__image">
         <img src="santa-cat-market.png" alt="Santa Catarina Market in Barcelona">
       </div>
