Add more media queries, add buttons with changing colours

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <div>
         <h1 class="introduction__title">This repository is intended for testing things</h1>
       </div>
-      <div>
+      <!-- <div>
         <h1>THIS IS THE CHANGE</h1>
-      </div>
+      </div> -->
       <div class="introduction__content">
-        [<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
           industry's
           standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
           make a
@@ -28,9 +28,13 @@
           Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
           versions
           of Lorem Ipsum.</p>
-      </div>]
+      </div>
       <div class="introduction__image">
         <img src="santa-cat-market.png" alt="Santa Catarina Market in Barcelona">
+      </div>
+      <div>
+        <button class="first-button">Learn more</button>
+        <button class="second-button">Contact us</button>
       </div>
     </div>
   </main>
