Add search button, search setup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <div>
+      
+        <input type="text" id="search-term" placeholder="Search..">
+        <button id="search-button">Search</button>
+    </div>
     <div id="root">
     </div>
 
